Refactored and optimized for near-final version